--- a/.gitignore
+++ b/.gitignore
@@ -1,52 +1,21 @@
-# Prerequisites
-*.d
+# Generated files
+bin/
+obj/
+*.log
 
-# Object files
-*.o
-*.ko
-*.obj
-*.elf
+# Eclipse files
+RemoteSystemsTempFiles/
+Debug/
+Release/
+.settings/
+.cproject
+.project
 
-# Linker output
-*.ilk
-*.map
-*.exp
+# CLion files
+.idea/
 
-# Precompiled Headers
-*.gch
-*.pch
-
-# Libraries
-*.lib
-*.a
-*.la
-*.lo
-
-# Shared objects (inc. Windows DLLs)
-*.dll
-*.so
-*.so.*
-*.dylib
-
-# Executables
-*.exe
-*.out
-*.app
-*.i*86
-*.x86_64
-*.hex
-
-# Debug files
-*.dSYM/
-*.su
-*.idb
-*.pdb
-
-# Kernel Module Compile Results
-*.mod*
-*.cmd
-.tmp_versions/
-modules.order
-Module.symvers
-Mkfile.old
-dkms.conf
+# Visual Studio Code files
+.vscode/*
+!.vscode/c_cpp_properties.json
+!.vscode/launch.json
+!.vscode/tasks.json
