--- a/fileSystem/.vscode/launch.json
+++ b/fileSystem/.vscode/launch.json
@@ -5,7 +5,7 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "(gdb) Launch",
+            "name": "run Launch",
             "type": "cppdbg",
             "request": "launch",
             "program": "${workspaceFolder}/bin/filesystem.out",
@@ -27,7 +27,7 @@
                     "ignoreFailures": true
                 }
             ],
-            "preLaunchTask": "make-kernel"
+            "preLaunchTask": "make-filesystem"
         }
     ]
 }
