--- a/fileSystem/.vscode/launch.json
+++ b/fileSystem/.vscode/launch.json
@@ -8,7 +8,7 @@
             "name": "run Launch",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/bin/filesystem.out",
+            "program": "${workspaceFolder}/bin/fileSystem.out",
             "args": [],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
