cambios en memoria, ahora levanta serv

--- a/memoria/.vscode/launch.json
+++ b/memoria/.vscode/launch.json
@@ -9,7 +9,9 @@
             "type": "cppdbg",
             "request": "launch",
             "program": "${workspaceFolder}/bin/memoria.out",
-            "args": [],
+            "args": [
+                "cfg/memoria_config_base.cfg"
+            ],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
             "environment": [
