--- a/memoria/.vscode/launch.json
+++ b/memoria/.vscode/launch.json
@@ -5,7 +5,7 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "run Launch",
+            "name": "memoria",
             "type": "cppdbg",
             "request": "launch",
             "program": "${workspaceFolder}/bin/memoria.out",
