--- a/kernel/cfg/kernel_config_base.cfg
+++ b/kernel/cfg/kernel_config_base.cfg
@@ -1,3 +1,4 @@
+IP_ESCUCHA=127.0.0.1
 IP_MEMORIA=127.0.0.1
 PUERTO_MEMORIA=8002
 IP_FILESYSTEM=127.0.0.1
@@ -9,4 +10,6 @@ ALGORITMO_PLANIFICACION=HRRN
 ESTIMACION_INICIAL=10000.0
 HRRN_ALFA=0.5
 GRADO_MAX_MULTIPROGRAMACION=4
+RECURSOS=[DISCO, RECURSO_1]
+INSTANCIAS_RECURSOS=[1, 2]
 
