--- a/consola/.vscode/launch.json
+++ b/consola/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "cppdbg",
             "request": "launch",
             "program": "${workspaceFolder}/bin/consola.out",
-            "args": ["cfg/consola_config.cfg", "./instrucciones/archivo1"],
+            "args": ["cfg/consola_config.cfg", "include/instrucciones/instrucciones_base"],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
             "environment": [
