--- a/fileSystem/cfg/fileSystem_config_base.cfg
+++ b/fileSystem/cfg/fileSystem_config_base.cfg
@@ -2,7 +2,7 @@ IP_MEMORIA=127.0.0.1
 PUERTO_MEMORIA=8002
 PUERTO_ESCUCHA=8003
 RETARDO_ACCESO_BLOQUE=15000
-PATH_SUPERBLOQUE=~/fileSystem/superbloque.dat
-PATH_BITMAP=~/fileSystem/bitmap.dat
-PATH_BLOQUES=~/fileSystem/bloques.dat
-PATH_FCB=~/fileSystem/fcb
+PATH_SUPERBLOQUE=~/fs/sbloque.dat
+PATH_BITMAP=~/fs/bitmap.dat
+PATH_BLOQUES=~/fs/bloques.dat
+PATH_FCB=~/fs/fcb
