arreglo cfg que estaba mal

--- a/memoria/cfg/Memoria_Errores.cfg
+++ b/memoria/cfg/Memoria_Errores.cfg
@@ -1,8 +1,7 @@
-IP_MEMORIA=127.0.0.1
-PUERTO_MEMORIA=8002
-PUERTO_ESCUCHA=8003
-RETARDO_ACCESO_BLOQUE=15000
-PATH_SUPERBLOQUE=~/fs/sbloque.dat
-PATH_BITMAP=~/fs/bitmap.dat
-PATH_BLOQUES=~/fs/bloques.dat
-PATH_FCB=~/fs/fcb
+PUERTO_ESCUCHA=8002
+TAM_MEMORIA=4096
+TAM_SEGMENTO_0=128
+CANT_SEGMENTOS=16
+RETARDO_MEMORIA=1000
+RETARDO_COMPACTACION=60000
+ALGORITMO_ASIGNACION=BEST
