--- a/fileSystem/.vscode/launch.json
+++ b/fileSystem/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "cppdbg",
             "request": "launch",
             "program": "${workspaceFolder}/bin/fileSystem.out",
-            "args": ["cfg/FileSystem_Deadlock.cfg", "superbloque.dat"],
+            "args": ["cfg/FileSystem_Memoria.cfg", "superbloque.dat"],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
             "environment": [
