--- a/memoria/.vscode/launch.json
+++ b/memoria/.vscode/launch.json
@@ -10,7 +10,7 @@
             "request": "launch",
             "program": "${workspaceFolder}/bin/memoria.out",
             "args": [
-                "cfg/Memoria_Filesystem.cfg"
+                "cfg/Memoria_Memoria.cfg"
             ],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
