--- a/cpu/.vscode/launch.json
+++ b/cpu/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "cppdbg",
             "request": "launch",
             "program": "${workspaceFolder}/bin/cpu.out",
-            "args": ["cfg/CPU.cfg"],
+            "args": ["cfg/CPU_Memoria.cfg"],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
             "environment": [
